app/assets/stylesheets/main.css.scss
/******************************************************************************
** Header && Footer
*******************************************************************************/

#logo { 
  a { 
  color: #000;
  font-family: "Special Elite", Arial, sans-serif;
  }
}

#mini-nav {
  float: right;
}

#main-post-button { 
  float: right; 
  clear: both;
}

footer {
  margin-top: $panel-padding;
}

/******************************************************************************
** Style
*******************************************************************************/

pre { 
  font-size: $paragraph-font-size; 
  margin-bottom: $paragraph-margin-bottom; 
}

code { 
  font-weight: normal;
  color: #449; 
  white-space: pre; 
  font-family: 'Ubuntu Mono', 'Courier', 'monospace';
}

.small { font-size: $small-font-size; }

.mr-button {
  $bg: #FFF;
  $radius: $global-radius;
  $is-input: false;
  @include button-base;
  @include button-style($bg, $radius);
  @include button-size;
}

.subheader {
  ~ hr { margin-top: 0px; }
}
/******************************************************************************
** Memos
*******************************************************************************/

// Basic Memo Styling
$memo-border-radius: 0px;
$memo-border-color: #DDD;
.memo {
  @include panel;
  padding: emCalc(5px);
  background: #FFF;
  margin: 0px;
  overflow: hidden;
  .memo-identifier {
    color: $small-font-color;
    padding: $panel-padding;
    float: left;
    span { font-size: $small-font-size; }
  }
  .memo-wrapper { 
    float: left;
    margin-bottom: 0px; 
  }
  border-radius: $memo-border-radius;
}

.memo-header {
  padding: $panel-padding; 
  .memo-title { font-size: emCalc(13px) }
}

// Special memo stylings
.main-memo {
  padding: 1px;
  border: thin solid $memo-border-color;
}

.memo-full {
  padding-bottom: $paragraph-margin-bottom;
}

